test/pass/io/close_file_twice.lily
var f = File.open("io_test_file.txt", "w")

f.close()
f.close()
